[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/check-membership",
    "pallets/compounding-interest",
    "pallets/currency-imbalances",
    "pallets/simple-crowdfund",
    "pallets/reservable-currency",
    "pallets/lockable-currency",
    "pallets/double-map",
    "pallets/randomness",
    "pallets/fixed-point",
    "pallets/ringbuffer-queue",
    "runtime",
]
[profile.release]
panic = "unwind"
