[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/staking-reward",
    "pallets/check-membership",
    "pallets/compounding-interest",
    "pallets/currency-imbalances",
    "pallets/simple-crowdfund",
    "pallets/reservable-currency",
    "pallets/lockable-currency",
    "pallets/double-map",
    "pallets/randomness",
    "pallets/fixed-point",
    "pallets/ringbuffer-queue",
    "pallets/storage-cache",
    "pallets/struct-storage",
    "runtime",
]
[profile.release]
panic = "unwind"
